@@ -5,6 +5,8 @@
 ################################################################################
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
+RH-2012-03-17-5:  Bugfix:     Changes for OpenSSL API diff. 
+
 RH-2012-03-17-4:  Enhancem.   Fine-grained CheckBinaries()
 
 RH-2012-03-17-3:  Enhancem.   remove unused -R compiler flag in qtcsh
